--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,50 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
+
+.layout-padding {
+  @apply px-32
+}
+
+.navbar-active {
+  @apply bg-gray-500
+}
+
+.header-nav a {
+  @apply px-4 relative
+}
+
+.header-nav a::after {
+  @apply block absolute h-[5px] bg-blue-500;
+  content: '';
+  width: 0%;
+  bottom: -1em;
+  transition: all ease-in-out 250ms;
+}
+
+.header-nav a:hover::after {
+  width: 100%;
+}
+
+.nav-selected {
+  @apply text-yellow-500
+}
+
+.nav-selected a::after {
+  @apply block absolute h-[5px] bg-blue-500;
+  content: '';
+  width: 100%;
+  bottom: -1em;
+  transition: all ease-in-out 250ms;
 }
 
 a {
@@ -16,11 +57,13 @@ a {
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
   body {
     color: white;
-    background: black;
+  }
+}
+
+@media (max-width: 880px) {
+  .layout-padding {
+    @apply px-8
   }
 }
