--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,6 +62,12 @@ a {
   }
 }
 
+@media (max-height: 690px) and (max-width: 1280px) {
+  .HomeHero {
+    @apply pt-[75px] justify-start
+  }
+}
+
 @media (max-width: 880px) {
   .layout-padding {
     @apply px-8
