--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,6 +47,39 @@ body {
   transition: all ease-in-out 250ms;
 }
 
+.tabs {
+}
+
+.tab-selected {
+  @apply -translate-y-8 text-white tabs bg-blue-500 hover:scale-95 hover:brightness-75
+}
+
+.testimonials::before {
+  @apply -top-5 left-14 absolute text-blue-500;
+  content: '\201C';
+  line-height: 1;
+  font-size: 10rem;
+}
+
+.testimonials::after {
+  @apply -top-5 right-14 absolute text-blue-500;
+  content: '\201C';
+  line-height: 1;
+  font-size: 10rem;
+}
+
+.dots {
+  @apply absolute bottom-0 flex left-1/2 -translate-x-1/2
+}
+
+.dots__dot {
+  @apply bg-gray-500/40 w-3 h-3 rounded-full mx-5 transition
+}
+
+.dots__dot--active {
+  @apply bg-gray-500/90
+}
+
 a {
   color: inherit;
   text-decoration: none;
