--- a/styles/globals.css
+++ b/styles/globals.css
@@ -55,17 +55,15 @@ body {
 }
 
 .testimonials::before {
-  @apply -top-5 left-14 absolute text-blue-500;
+  @apply -top-2 left-14 absolute text-blue-500 text-[5rem] md:text-[10rem] sm:-top-5;
   content: '\201C';
   line-height: 1;
-  font-size: 10rem;
 }
 
 .testimonials::after {
-  @apply -top-5 right-14 absolute text-blue-500;
+  @apply -top-2 right-14 absolute text-blue-500 text-[5rem] md:text-[10rem] sm:-top-5;
   content: '\201C';
   line-height: 1;
-  font-size: 10rem;
 }
 
 .dots {
