--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,6 +79,10 @@ body {
   @apply bg-gray-500/90
 }
 
+.vertical-text {
+  writing-mode: vertical-lr;
+}
+
 a {
   color: inherit;
   text-decoration: none;
